feat: change dueAt

--- a/src/public/subscriptions/i.html
+++ b/src/public/subscriptions/i.html
@@ -61,6 +61,12 @@
                     <input type="text" class="form-control" v-model="status" id="status" readonly />
                 </div>
             </div>
+            <div class="row">
+                <div class="mb-3 col-lg">
+                    <label for="dueAt" class="form-label">Data de vencimento:</label>
+                    <input type="date" class="form-control" v-model="dueDate" id="dueAt" />
+                </div>
+            </div>
 
             <button type="submit" class="btn btn-dark">Enviar</button>
         </form>
