--- a/src/public/subscriptions/i.html
+++ b/src/public/subscriptions/i.html
@@ -58,7 +58,13 @@
 
                 <div class="mb-3 col-lg">
                     <label for="status" class="form-label">Status</label>
-                    <input type="text" class="form-control" v-model="status" id="status" readonly />
+                    <select class="form-select" v-model="status" id="status">
+                        <option disabled value="">Selecione uma opção</option>
+                        <option value="Pendente">Pendente</option>
+                        <option value="Pago">Pago</option>
+                        <option value="Não pago">Não pago</option>
+                        <option value="Cancelado">Cancelado</option>
+                    </select>
                 </div>
             </div>
             <div class="row">
