--- a/src/public/projects/i.html
+++ b/src/public/projects/i.html
@@ -36,6 +36,9 @@
             <a href="../subscriptions" class="btn btn-dark btn-sm my-2">Assinaturas</a>
             <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
             <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
+            <a href="../billings" class="btn btn-dark btn-sm my-2">Cobranças</a>
+            <a href="../protocols" class="btn btn-dark btn-sm my-2">Protocolos</a>
+
         </div>
 
         <hr />
