--- a/src/public/billings/i.html
+++ b/src/public/billings/i.html
@@ -99,7 +99,8 @@
                     <tr>
                         <th scope="col"># Protocolo</th>
                         <th scope="col">Detalhes</th>
-                        <th scope="col">Status do Protocolo</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Observações</th>
                         <th scope="col">Valor</th>
                         <th scope="col">Editar</th>
                         <th scope="col">Abrir</th>
@@ -128,6 +129,7 @@
                                 {{item.Protocol?.Service_order?.subject}}
                         </td>
                         <td>{{item.Protocol.status}}</td>
+                        <td>{{item.Protocol.notes || '-'}}</td>
                         <td>{{formatCurrency(item.value)}}</td>
                         <td>
 
