--- a/src/public/protocols/i.html
+++ b/src/public/protocols/i.html
@@ -55,6 +55,12 @@
                     </select>
                 </div>
             </div>
+            <div class="row">
+                <div class="mb-3 col">
+                    <label class="form-label">Observações</label>
+                    <textarea class="form-control" v-model="protocol.notes" rows="3"></textarea>
+                </div>
+            </div>
 
             <button type="submit" class="btn btn-dark">Salvar Alterações</button>
         </form>
