--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -106,6 +106,14 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="mb-3 col-lg">
+                                <label for="protocolNotes" class="form-label">Observações</label>
+                                <textarea type="text" class="form-control" v-model="Protocol.notes" id="protocolNotes"
+                                    rows="4"></textarea>
+                            </div>
+                        </div>
+
 
                         <button type="submit" class="btn btn-dark">Enviar</button>
 
