fix: buttons on dashboard

--- a/src/public/dashboard.html
+++ b/src/public/dashboard.html
@@ -28,12 +28,14 @@
 
     <div class="container p-4" id="dashboard">
         <div class="col">
-            <a href="/clients" class="btn btn-dark btn-sm my-2">Clientes</a>
-            <a href="/projects" class="btn btn-dark btn-sm my-2">Projetos</a>
-            <a href="/service_orders" class="btn btn-dark btn-sm my-2">Os</a>
-            <a href="/subscriptions" class="btn btn-dark btn-sm my-2">Assinaturas</a>
-            <a href="/servers" class="btn btn-dark btn-sm my-2">Servidores</a>
-            <a href="/products" class="btn btn-dark btn-sm my-2">Produtos</a>
+            <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
+            <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
+            <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
+            <a href="../subscriptions" class="btn btn-dark btn-sm my-2">Assinaturas</a>
+            <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
+            <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
+            <a href="../billings" class="btn btn-dark btn-sm my-2">Cobranças</a>
+            <a href="../protocols" class="btn btn-dark btn-sm my-2">Protocolos</a>
         </div>
 
         <hr />
