--- a/src/public/billings/index.html
+++ b/src/public/billings/index.html
@@ -45,6 +45,8 @@
                 <h5>Cobranças</h5>
             </div>
             <div class="w-15 d-flex" style="gap: 5px">
+                <input type="date" class="form-control" v-model="startDate" v-on:change="handlerSearch" />
+                <input type="date" class="form-control" v-model="endDate" v-on:change="handlerSearch" />
                 <input type="search" class="form-control" placeholder="Pesquisar" v-model="q"
                     v-on:keyup="handlerSearch" />
                 <a class="btn btn-dark" href="../billings/i.html"><i class="fa-solid fa-plus"></i></a>
