--- a/src/public/protocols/index.html
+++ b/src/public/protocols/index.html
@@ -77,6 +77,22 @@
                     </tr>
                 </tbody>
             </table>
+
+            <div class="d-flex justify-content-center">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        <li class="page-item" :class="{ disabled: page === 1 }">
+                            <a class="page-link" href="#" @click.prevent="prevPage">Anterior</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">{{ page }}</a>
+                        </li>
+                        <li class="page-item" :class="{ disabled: page === totalPages }">
+                            <a class="page-link" href="#" @click.prevent="nextPage">Próxima</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </div>
 
