--- a/src/public/service_orders/index.html
+++ b/src/public/service_orders/index.html
@@ -46,7 +46,7 @@
                 <h5>Ordens de serviço</h5>
             </div>
             <div class="w-15 d-flex" style="gap: 5px">
-                <select class="form-select" v-model="currentStatus" id="currentStatus" size="4" multiple>
+                <select class="form-select" v-model="currentStatus" id="currentStatus" size="4" multiple v-on:change="fetchServiceOrders">
                     <option value="">Todos</option>
                     <option value="Em avaliação">Em avaliação</option>
                     <option value="Orçamento enviado">Orçamento enviado</option>
@@ -102,6 +102,22 @@
                     </tr>
                 </tbody>
             </table>
+
+            <div class="d-flex justify-content-center">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        <li class="page-item" :class="{ disabled: page === 1 }">
+                            <a class="page-link" href="#" @click.prevent="prevPage">Anterior</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">{{ page }}</a>
+                        </li>
+                        <li class="page-item" :class="{ disabled: page === totalPages }">
+                            <a class="page-link" href="#" @click.prevent="nextPage">Próxima</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </div>
 
