feat: Relatorio de despesa

--- a/src/public/financial-history/index.html
+++ b/src/public/financial-history/index.html
@@ -6,8 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico Financeiro</title>
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css">
+
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css" />
+
+    <script src="../assets/js/vue.min.js"></script>
+    <script src="../assets/js/jquery-3.6.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2/dist/umd/popper.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/axios.min.js"></script>
+    <script src="../assets/js/moment.min.js"></script>
+
     <style>
         .text-inflow {
             color: green !important;
@@ -17,9 +26,6 @@
             color: red !important;
         }
     </style>
-    <script src="../assets/js/vue.min.js"></script>
-    <script src="../assets/js/axios.min.js"></script>
-    <script src="../assets/js/moment.min.js"></script>
 </head>
 
 <body>
@@ -90,6 +96,7 @@
                     </button>
                     <ul class="dropdown-menu dropdown-menu-dark">
                         <li><a class="dropdown-item" href="../financial-history/">Fluxo de caixa</a></li>
+                        <li><a class="dropdown-item" href="../expense-report/">Relatório de Despesas</a></li>
                     </ul>
                 </div>
             </div>
