--- a/src/public/projects/i.html
+++ b/src/public/projects/i.html
@@ -88,6 +88,7 @@
                     </button>
                     <ul class="dropdown-menu dropdown-menu-dark">
                         <li><a class="dropdown-item" href="../financial-history/">Fluxo de caixa</a></li>
+                        <li><a class="dropdown-item" href="../expense-report/">Relatório de Despesas</a></li>
                     </ul>
                 </div>
             </div>
