--- a/src/public/expense-report/index.html
+++ b/src/public/expense-report/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codlinx - Assinaturas</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Relatório de Despesas por Centro de Custo</title>
 
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css" />
@@ -16,18 +16,33 @@
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/axios.min.js"></script>
     <script src="../assets/js/moment.min.js"></script>
+
+
+    <style>
+        .tree-node {
+            padding-left: 20px;
+        }
+
+        .node-label {
+            cursor: pointer;
+        }
+
+        .node-label:hover {
+            color: blue;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="navbar bg-light">
         <div class="container">
             <a class="navbar-brand" href="/dashboard">
-                <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
+                <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40">
             </a>
         </div>
     </nav>
 
-    <div class="container p-4" id="subscriptions">
+    <div class="container p-4" id="app">
         <div class="col">
             <div class="d-flex flex-wrap" style="gap:.5rem">
                 <div class="btn-group">
@@ -92,72 +107,56 @@
             </div>
         </div>
 
-        <hr />
+        <hr>
 
-        <div class="d-flex flex-wrap justify-content-between">
-            <div class="w-80">
-                <h5>Assinaturas</h5>
+        <h5>Relatório de Despesas por Centro de Custo</h5>
+
+        <!-- Filters -->
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <label>Data de Início</label>
+                <input type="date" class="form-control" v-model="filters.startDate">
             </div>
-            <div class="w-15 d-flex" style="gap: 5px">
-                <select class="form-select" v-model="currentStatus" id="currentStatus" size="4" multiple>
-                    <option value="">Todos</option>
-                    <option value="Pendente">Pendente</option>
-                    <option value="Pago">Pago</option>
-                    <option value="Não pago">Não pago</option>
-                    <option value="Cancelado">Cancelado</option>
-                </select>
-
-                <button class="btn btn-dark" v-on:click="exportToFile">
-                    <i class="fa-solid fa-file-export"></i>
-                </button>
+            <div class="col-md-4">
+                <label>Data de Fim</label>
+                <input type="date" class="form-control" v-model="filters.endDate">
+            </div>
+            <div class="col-md-4 d-flex align-items-end">
+                <button class="btn btn-primary" @click="fetchReport">Filtrar</button>
             </div>
         </div>
 
-        <div class="table-responsive m-2">
-            <table class="table table-striped border" data-toggle="table" id="table-subscriptions">
-                <thead>
-                    <tr>
-                        <th scope="col" style="cursor: pointer" v-on:click="sort('id')">
-                            # <i class="fa-solid fa-sort"></i>
-                        </th>
-                        <th>Nome</th>
-                        <th scope="col" style="cursor: pointer" v-on:click="sort('status')">
-                            Status <i class="fa-solid fa-sort"></i>
-                        </th>
-                        <th scope="col">Expira em</th>
-                        <th scope="col">Projeto</th>
-                        <th scope="col">Cliente</th>
-                        <th scope="col">Abrir</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="subscription of subscriptions"
-                        v-if="!currentStatus[0] || currentStatus.includes(subscription.status)">
-                        <th scope="row">{{subscription.id}}</th>
-                        <td>{{subscription.name || "-"}}</td>
-                        <td>{{subscription.status}}</td>
-                        <td>{{moment(subscription.dueAt).format('DD/MM/YYYY')}}</td>
-                        <td>
-                            <a :href="'../projects/i?id='+subscription.Project?.id">
-                                {{subscription.Project?.name}}
-                            </a>
-                        </td>
-                        <td v-if="subscription.ClientId">
-                            <a :href="'../clients/i?id='+subscription.Client?.id">
-                                {{subscription.Client?.name}}
-                            </a>
-                        </td>
-                        <td>
-                            <a :href="'../subscriptions/i?id='+subscription.id"><i
-                                    class="fa-solid fa-arrow-right"></i></a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <!-- Tree Report -->
+        <div class="card">
+            <div class="card-body">
+                <ul class="list-group list-group-flush">
+                    <cost-center-node v-for="node in reportData" :key="node.id" :node="node"></cost-center-node>
+                </ul>
+            </div>
         </div>
     </div>
 
-    <script src="../assets/js/subscriptions/subscriptions.js"></script>
+    <!-- Vue template for the recursive node component -->
+    <script type="text/x-template" id="cost-center-node-template">
+        <li class="list-group-item">
+            <div @click="toggle" class="d-flex justify-content-between align-items-center node-label">
+                <span>
+                    <i v-if="hasChildren" class="fas" :class="{'fa-plus-square': !expanded, 'fa-minus-square': expanded}"></i>
+                    <strong class="ml-2">{{ node.name }}</strong>
+                </span>
+                <span class="font-weight-bold">{{ formatCurrency(node.total) }}</span>
+            </div>
+            <ul v-if="expanded && hasChildren" class="list-group list-group-flush tree-node">
+                <cost-center-node
+                    v-for="child in node.children"
+                    :key="child.id"
+                    :node="child"
+                ></cost-center-node>
+            </ul>
+        </li>
+    </script>
+
+    <script src="../assets/js/expense-report/expense-report.js"></script>
 </body>
 
 </html>
