fix: nao exibe centro de custo neto; feat: flatten com identacao

--- a/src/public/cost-centers/i.html
+++ b/src/public/cost-centers/i.html
@@ -114,7 +114,7 @@
                     <select v-model="ParentId" class="form-control">
                         <option :value="null">-- Nenhum --</option>
                         <option v-for="cc in allCostCenters" :value="cc.id" :disabled="cc.id === id">
-                            {{ cc.name }}
+                            {{cc.indentation}}{{ cc.name }}
                         </option>
                     </select>
                 </div>
