feat: Transferencia entre contas

--- a/src/public/expense-report/index.html
+++ b/src/public/expense-report/index.html
@@ -80,6 +80,7 @@
                         <li><a class="dropdown-item" href="../protocols">Protocolos</a></li>
                         <li><a class="dropdown-item" href="../bank-accounts">Contas Bancárias</a></li>
                         <li><a class="dropdown-item" href="../cost-centers">Centros de Custo</a></li>
+                        <li><a class="dropdown-item" href="../bank-transfers">Transferências entre contas</a></li>
 
                     </ul>
                 </div>
