--- a/src/public/protocols/i.html
+++ b/src/public/protocols/i.html
@@ -35,7 +35,8 @@
             <a href="../subscriptions" class="btn btn-dark btn-sm my-2">Assinaturas</a>
             <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
             <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
-            <a href="../billings" class="btn btn-dark btn-sm my-2">Cobranças</a>
+                        <li><a class="dropdown-item" href="../cost-centers">Centros de Custo</a></li>
+                        <li><a class="dropdown-item" href="../bank-transfers">Transferências entre contas</a></li>
             <a href="../protocols" class="btn btn-dark btn-sm my-2">Protocolos</a>
         </div>
 
